syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message Restriction {
    int32 restriction_id  = 1;
    string restriction_name_sr = 2;
    string restriction_name_en = 3;
    string restriction_name_bg = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;

}
